structmeta-tests/tests/compile_fail/struct_meta/duplicate_named_arguments_with_rest.rs
#[structmeta_tests::attr_required_and_rest_named_value(value = 10, value = 10)]
fn my_func() {}

fn main() {}
