structmeta-tests/tests/compile_fail/struct_meta/duplicate_named_arguments_with_rest.stderr
error[E0433]: failed to resolve: could not find `attr_required_and_rest_named_value` in `structmeta_tests`
 --> $DIR/duplicate_named_arguments_with_rest.rs:1:21
  |
1 | #[structmeta_tests::attr_required_and_rest_named_value(value = 10, value = 10)]
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ could not find `attr_required_and_rest_named_value` in `structmeta_tests`
